# Tunnel-descent

./: CMakeLists.txt
blender/: spaceship_v1.blend  spaceship_v1.blend1
include/: Camera.h  Entity.h  Mesh.h  ObjLoader.h  PointLight.h  SceneLoader.h
resources/: bezier.txt  light_coordinates.txt  spaceship_model.mtl
scripts/: save_bezier.py  save_lights.py
shaders/: FragmentShader.glsl  VertexShader.glsl
src/: Camera.cpp  Entity.cpp  Mesh.cpp  ObjLoader.cpp  PointLight.cpp  SceneLoader.cpp  ShaderUtils.cpp  main.cpp
